Fixed feedback text align

--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ input[type=radio]:not(old):checked +  label > span > span{
         box-sizing: border-box;
         width: 80%;
         text-align: center;
-   		top: 40%;
+   		top: 35%;
    		left: 10%;                         
    		transform: translate(0, -50%);
    		display: none;   
